--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
+    <header >
+        <nav class="navbar">
+            <img src="logo.png" alt="Logo" class="logo">
+            <div class="button-container">
+                <button class="run-code-btn">Run Code</button>
+                <button class="upload-code-btn">Upload Code</button>
+              </div>
+        </nav>
+    </header>
 </body>
 </html>
