Added code editor

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
             <div class="button-container">
                 <button class="run-code-btn">Run Code</button>
                 <button class="upload-code-btn">Upload Code</button>
-              </div>
+            </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="code-box">
+              <!-- Your code input field or editor can be placed here -->
+            </div>
+        </div>
+    </main>
 </body>
 </html>
