Updated code editor

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class = "main">
         <div class="container">
-            <div class="code-box">
-              <!-- Your code input field or editor can be placed here -->
-            </div>
+            <textarea id="code-editor" class="code-editor" placeholder="Enter your code"></textarea>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
