--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class = "main">
         <div class="container">
-            <textarea id="code-editor" class="code-editor" placeholder="Enter your code"></textarea>
+                <textarea class="code-editor"placeholder="Enter your code"></textarea>
         </div>
     </main>
     <script src="script.js"></script>
