Added lexemes and syntax tree container

--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
             </div>
         </nav>
     </header>
-    <main class = "main">
+    <main class="main">
         <div class="container">
-                <textarea class="code-editor"placeholder="Enter your code"></textarea>
+          <textarea class="code-editor" placeholder="Enter your code"></textarea>
         </div>
-    </main>
+        <div class="output-container">
+          <div class="flex-box1">
+            <div class="text">Lexemes</div>
+            <div class="lexical-analyzer"></div>
+          </div>
+          <div class="flex-box2">
+            <div class="text">Syntax Tree</div>
+            <div class="syntax-analyzer"></div>
+          </div>
+        </div>
+      </main>
     <script src="script.js"></script>
 </body>
 </html>
