Commented out line numbers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </header>
     <main class="main">
         <div class="container">
-          <textarea class="code-editor" placeholder="Enter your code"></textarea>
+          <!-- <span class="line-numbers"></span> -->
+          <textarea id="code-editor" class="code-editor" placeholder="Enter your code"></textarea>
         </div>
         <div class="output-container">
           <div class="flex-box1">
